@@ -84,6 +84,7 @@ static int is_supported(enum AVCodecID id)
     case AV_CODEC_ID_MJPEG:
     case AV_CODEC_ID_SPEEX:
     case AV_CODEC_ID_OPUS:
+    case AV_CODEC_ID_RAWVIDEO:
         return 1;
     default:
         return 0;
@@ -618,6 +619,9 @@ static int rtp_write_packet(AVFormatContext *s1, AVPacket *pkt)
         break;
     case AV_CODEC_ID_MJPEG:
         ff_rtp_send_jpeg(s1, pkt->data, size);
+        break;
+    case AV_CODEC_ID_RAWVIDEO:
+        ff_rtp_send_raw_rfc4175 (s1, pkt->data, size);
         break;
     case AV_CODEC_ID_OPUS:
         if (size > s->max_payload_size) {
